probando link pre deploy

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="Tu Menu Virtual - Registrate y genera una carta virtual moderna para tus clientes."/>
+    <meta name="description" content="Bar RC"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;500;700&display=swap" rel="stylesheet">
@@ -15,7 +15,7 @@
     <link rel="icon" href="https://cdn-icons-png.flaticon.com/512/641/641342.png" />
     <!-- FAVICON APPLE -->
 
-    <title>Tu Menu Virtual - Registrate y genera una carta virtual moderna para tus clientes.</title>
+    <title>Bar RC - Tu lugar de encuentro.</title>
   </head>
   <body>
     <!-- <noscript>You need to enable JavaScript to run this app.</noscript> -->
